--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "OxidizeOnIntelliJ"
+name = "chronos"
 version = "0.1.0"
 edition = "2021"
 
@@ -21,6 +21,8 @@ uuid = { version="1.3.0", features = [
 env_logger = "0.10.0"
 log = "0.4.17"
 anyhow = "1.0.69"
+postgres = {version="0.19.4", features=["with-chrono-0_4"]}
+dotenvy = "0.15"
 
 [dev-dependencies]
 criterion = "0.4.0"
