--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,20 @@ uuid = { version="1.3.0", features = [
 env_logger = "0.10.0"
 log = "0.4.17"
 anyhow = "1.0.69"
-postgres = {version="0.19.4", features=["with-chrono-0_4"]}
+
 dotenvy = "0.15"
 futures="0.3.26"
 async-trait = "0.1.66"
+
+
+# postgres = {version="0.19.4",features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
+
+postgres-types = {version="0.2.4", features=["derive"]}
+tokio-postgres = {version="0.7.7", features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
+#tokio-postgres = {version="0.7.7", features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
+
+
+
 [dev-dependencies]
 criterion = "0.4.0"
 
