--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-DATABASE_URL=postgres://admin:admin@localhost/chronos_db
+# DATABASE_URL=postgres://admin:admin@localhost/chronos_db
+
+RUST_LOG=debug
+# MY_LOG=
