--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,24 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+#logging
+env_logger = "0.10.0"
+log = { version = "0.4", features = [  "kv_unstable",    "std",    "kv_unstable_serde" ] }
+
+#Exception handling
+anyhow = "1.0.69"
+
+#async
+futures="0.3.26"
+async-trait = "0.1.66"
 tokio = { version = "1", features = ["full"] }
-reqwest = "0.11.14"
+
+#data parsing
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
+
+# postgres = {version="0.19.4",features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
+tokio-postgres = {version="0.7.7", features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
 rdkafka = { version = "0.29.0" }
 clap = { version = "4.1.4", features = ["derive"] }
 chrono = "0.4.23"
@@ -18,18 +32,9 @@ uuid = { version="1.3.0", features = [
     "fast-rng",          # Use a faster (but still sufficiently random) RNG
     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ] }
-env_logger = "0.10.0"
-log = "0.4.17"
-anyhow = "1.0.69"
-
 dotenvy = "0.15"
-futures="0.3.26"
-async-trait = "0.1.66"
-
-
-# postgres = {version="0.19.4",features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
-tokio-postgres = {version="0.7.7", features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
-
+clippy = "0.0.302"
+hdrhistogram = "7.5.2"
 
 
 [dev-dependencies]
