chore: read from env file and add header for test to be passed

--- a/env.example
+++ b/env.example
@@ -9,7 +9,7 @@ RUST_VERSION=1.66.0
 KAFKA_BROKERS="localhost:9093"
 KAFKA_CLIENT_ID="chronos-dev"
 KAFKA_GROUP_ID="chronos-dev"
-KAFKA_TOPIC="input.topic"
+KAFKA_TOPIC="inbox.topic"
 KAFKA_USERNAME=
 KAFKA_PASSWORD=
 
