--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,9 @@ uuid = { version="1.3.0", features = [
 dotenvy = "0.15"
 clippy = "0.0.302"
 hdrhistogram = "7.5.2"
-
-
+deadpool-postgres = "0.10"
+refinery = { version = "0.8.7", features = ["tokio-postgres"] }
+thiserror = "1.0.31"
 [dev-dependencies]
 criterion = "0.4.0"
 
