--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ serde_json = "1.0.93"
 
 # postgres = {version="0.19.4",features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
 tokio-postgres = {version="0.7.7", features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
-rdkafka = { version = "0.29.0" }
+rdkafka = { version = "0.29.0", features = ["sasl"] }
 clap = { version = "4.1.4", features = ["derive"] }
 chrono = "0.4.23"
 uuid = { version="1.3.0", features = [
