fix: update querues

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # WHEN DEVELOPING LOCALLY, WE NEED TO ACCESS THE HOST NETWORK FROM K8S (FOR POSTGRES/KAFKA/ELASTIC/ETC)
-LOCAL_HOST_IP=$(ifconfig en0 | grep inet | grep -v inet6 | awk '{print $2}')
+# LOCAL_HOST_IP=$(ifconfig en0 | grep inet | grep -v inet6 | awk '{print $2}')
 
 # RUST version
 RUST_VERSION=stable
@@ -28,4 +28,4 @@ ADMIN_PG_PASSWORD=admin
 ADMIN_PG_DATABASE=postgres
 
 # CONFIG
-RUST_LOG=debug
+RUST_LOG=info
