--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,35 +2,8 @@ name: build
 
 on:
   push:
-    branches: 
-      - feature/*
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: stable
-      - run: rustup component add rustfmt clippy
-      - name: cargo build
-        run: cargo build
-  publish:
-      runs-on: ubuntu-latest
-      needs: build
-      if: needs.build.result == 'success'
-      steps:
-        - name: Checkout the repo
-          uses: actions/checkout@v3
-        - name: Login to GitHub Container Registry
-          uses: docker/login-action@v1
-          with:
-            registry: ghcr.io
-            username: ${{ github.actor }}
-            password: ${{ secrets.AMN_PAT }}
-
-        - name: Build the chronos Docker image
-          run: |
-            docker build -f Dockerfile.chronos . --tag ghcr.io/kindredgroup/chronos:latest
-            docker push ghcr.io/kindredgroup/chronos:latest
+  build: 
+    uses:  ./.github/workflows/rust_build.yml
+      
