--- a/.github/workflows/release-db-migration.yml
+++ b/.github/workflows/release-db-migration.yml
@@ -1,4 +1,4 @@
-name: release app binary on tag
+name: release db-migration binary on tag
 
 # on tag push, build and push docker images to ghcr.io
 # and creating a GitHub release
@@ -12,9 +12,9 @@ on:
             # having major, minor and path version numbers
             # along with alpha beta support
             # e.g. v1.0.0-alpha.1, v1.0.0-beta.1, v1.0.0
-        - 'v[0-9]+.[0-9]+.[0-9]+(-[a-zA-Z0-9]+)+.[0-9]?'
-        - 'v[0-9]+.[0-9]+.[0-9]'
-        - 'v[0-9]+.[0-9]+.[0-9]+(-[a-zA-Z0-9]+)'
+          - 'v[0-9]+.[0-9]+.[0-9]+(-[a-zA-Z0-9]+)+.[0-9]'
+          - 'v[0-9]+.[0-9]+.[0-9]'
+          - 'v[0-9]+.[0-9]+.[0-9]+(-[a-zA-Z0-9]+)'
   
 jobs:
   build:
@@ -33,7 +33,10 @@ jobs:
             username: ${{ github.actor }}
             password: ${{ secrets.AMN_PAT }}
 
-        - name: Build and publish chronos for chronos image
+        
+        - name: Build and publish the chronos-pg-migration Docker image
           run: |
-            docker build -f Dockerfile.chronos . --tag ghcr.io/$GITHUB_REPOSITORY:$GITHUB_REF_NAME
-            docker push ghcr.io/$GITHUB_REPOSITORY:$GITHUB_REF_NAME
+            echo "Releaase Tag name: $GITHUB_REF_NAME"
+
+            docker build -f Dockerfile.chronos-pg-migrations . --tag ghcr.io/$GITHUB_REPOSITORY/db-migration:$GITHUB_REF_NAME
+            docker push ghcr.io/$GITHUB_REPOSITORY/db-migration:$GITHUB_REF_NAME
