--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,11 @@
 name: build
 
 on:
-  workflow_call:
+  push:
+    branches:
+      - feature/*
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: stable
-      - run: scripts/ubuntu-setup.sh
-      - run: rustup component add rustfmt clippy
-      - name: cargo build
-        run: cargo build
-      - run: scripts/pre-commit-checks.sh
+  build: 
+    uses:  ./.github/workflows/rust_build.yml
+      
