--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -14,4 +14,6 @@ jobs:
       - run: rustup component add rustfmt clippy
       - name: cargo build
         run: cargo build
+      - name: pre-commit checks
+        run: scripts/pre-commit-checks.sh
       
