--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # WHEN DEVELOPING LOCALLY, WE NEED TO ACCESS THE HOST NETWORK FROM K8S (FOR POSTGRES/KAFKA/ELASTIC/ETC)
-# LOCAL_HOST_IP=$(ifconfig en0 | grep inet | grep -v inet6 | awk '{print $2}')
+#LOCAL_HOST_IP=$(ifconfig en0 | grep inet | grep -v inet6 | awk '{print $2}')
 
 # RUST version
 RUST_VERSION=stable
@@ -22,10 +22,15 @@ PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=admin
 PG_DATABASE=chronos
-PG_POOL_SIZE=50
-ADMIN_PG_USER=postgres
-ADMIN_PG_PASSWORD=admin
-ADMIN_PG_DATABASE=postgres
+PG_POOL_SIZE=25
+
 
 # CONFIG
-RUST_LOG=info 
+RUST_LOG=info
+
+
+DELAY_TIME=0
+RANDOMNESS_DELAY=100
+DB_POLL_INTERVAL=5
+TIMING_ADVANCE=10
+FAIL_DETECT_INTERVAL=10
