--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ LOCAL_HOST_IP=$(ifconfig en0 | grep inet | grep -v inet6 | awk '{print $2}')
 RUST_VERSION=stable
 
 # KAFKA
-# KAFKA_BROKERS="localhost:9093\,$LOCAL_HOST_IP:9094"
-KAFKA_BROKERS="localhost:9093"
+KAFKA_BROKERS="localhost:9093\,$LOCAL_HOST_IP:9094"
+#KAFKA_BROKERS="localhost:9093"
 KAFKA_CLIENT_ID="chronos"
 KAFKA_GROUP_ID="chronos"
 KAFKA_IN_TOPIC="chronos.in"
@@ -21,11 +21,15 @@ PG_HOST=$LOCAL_HOST_IP
 PG_PORT=5432
 PG_USER=admin
 PG_PASSWORD=admin
-PG_DATABASE=talos_certifier
+PG_DATABASE=chronos_db
 PG_POOL_SIZE=50
-ADMIN_PG_USER=admin
-ADMIN_PG_PASSWORD=admin
-ADMIN_PG_DATABASE=postgres
 
 # CONFIG
 RUST_LOG=debug
+
+#APP
+DELAY_TIME=0
+RANDOMNESS_DELAY=100
+DB_POLL_INTERVAL=5
+TIMING_ADVANCE=0
+FAIL_DETECT_INTERVAL=500
