--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -3,25 +3,19 @@ name: rust_build
 on:
     workflow_call
 
+        
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: stable
-      - run: |
-          apt -qq list libsasl2-modules-gssapi-mit libsasl2-dev libssl-dev
-          sudo apt-get install libssl-dev
-          sudo apt-get install libsasl2-dev
-
-      - run: rustup component add rustfmt clippy
-      - name: cargo clean
-        run: cargo clean
-      - name: cargo build
-        run: cargo build
-      - name: pre-commit checks
-      #access scripts from scripts folder
-        run: scripts/pre-commit-checks.sh
-      
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - uses: dtolnay/rust-toolchain@stable
+              with:
+                  toolchain: stable
+            - run: scripts/ubuntu-setup.sh
+            - run: rustup component add rustfmt clippy
+            - name: cargo build
+              run: |
+                cargo clean
+                cargo build --release
+            - run: scripts/pre-commit-checks.sh
