chore: add Monitor config

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,8 @@ RUST_LOG=debug
 #APP
 DELAY_TIME=0
 RANDOMNESS_DELAY=100
-DB_POLL_INTERVAL=5
+MONITOR_DB_POLL=5
 TIMING_ADVANCE=0
 FAIL_DETECT_INTERVAL=500
+MAX_RETRIES=3
+PROCESSOR_DB_POLL=10
