Feature/adding config (#4)
* chore: changes for transactions

* chore: add Monitor config

---------

Co-authored-by: Amninder Kaur <amninder.kaur@kindredgroup.com>

--- a/.env
+++ b/.env
@@ -24,13 +24,14 @@ PG_PASSWORD=admin
 PG_DATABASE=chronos
 PG_POOL_SIZE=25
 
-
 # CONFIG
 RUST_LOG=info
 
-
+#APP
 DELAY_TIME=0
 RANDOMNESS_DELAY=100
-DB_POLL_INTERVAL=5
-TIMING_ADVANCE=10
-FAIL_DETECT_INTERVAL=10
+MONITOR_DB_POLL=5
+TIMING_ADVANCE=0
+FAIL_DETECT_INTERVAL=500
+MAX_RETRIES=3
+PROCESSOR_DB_POLL=10
