--- a/chronos_bin/Cargo.toml
+++ b/chronos_bin/Cargo.toml
@@ -52,6 +52,13 @@ uuid = { version="1.3.0", features = [
 rand.workspace = true
 openssl = "0.10.57"
 
+#tracing
+tracing.workspace = true
+tracing-subscriber.workspace = true
+tracing-opentelemetry.workspace = true
+opentelemetry.workspace = true
+opentelemetry-jaeger.workspace = true
+
 [dev-dependencies]
 serial_test.workspace = true
 
