--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,15 +6,15 @@ name: release app binary on tag
 on:
     release:
         types: [created]
-    # push:
-    #     tags:
-    #         # only build on tags that start with 'v'
-    #         # having major, minor and path version numbers
-    #         # along with alpha beta support
-    #         # e.g. v1.0.0-alpha.1, v1.0.0-beta.1, v1.0.0
-    #     - 'v[0-9]+.[0-9]+.[0-9]+(-[a-zA-Z0-9]+)+.[0-9]?'
-    #     - 'v[0-9]+.[0-9]+.[0-9]'
-    #     - 'v[0-9]+.[0-9]+.[0-9]+(-[a-zA-Z0-9]+)'
+    push:
+        tags:
+            # only build on tags that start with 'v'
+            # having major, minor and path version numbers
+            # along with alpha beta support
+            # e.g. v1.0.0-alpha.1, v1.0.0-beta.1, v1.0.0
+        - 'v[0-9]+.[0-9]+.[0-9]+(-[a-zA-Z0-9]+)+.[0-9]?'
+        - 'v[0-9]+.[0-9]+.[0-9]'
+        - 'v[0-9]+.[0-9]+.[0-9]+(-[a-zA-Z0-9]+)'
   
 jobs:
   build:
