chore: add otlp support for chronos

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 RUST_VERSION=stable
 
 # KAFKA
-# KAFKA_BROKERS="localhost:9093\,$LOCAL_HOST_IP:9094"
-KAFKA_BROKERS="localhost:9092"
+KAFKA_HOST="localhost\,$LOCAL_HOST_IP"
+KAFKA_PORT=9093
 KAFKA_CLIENT_ID="chronos"
 KAFKA_GROUP_ID="chronos"
 KAFKA_IN_TOPIC="chronos.in"
@@ -35,3 +35,7 @@ TIMING_ADVANCE=0
 FAIL_DETECT_INTERVAL=500
 MAX_RETRIES=3
 PROCESSOR_DB_POLL=10
+
+# TRACING
+OTEL_SERVICE_NAME=chronos
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
