--- a/chronos_bin/Cargo.toml
+++ b/chronos_bin/Cargo.toml
@@ -57,7 +57,12 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-opentelemetry.workspace = true
 opentelemetry.workspace = true
+opentelemetry_sdk.workspace = true
+opentelemetry_api.workspace = true
 opentelemetry-jaeger.workspace = true
+
+# opentelemetry-jaeger.workspace = true
+opentelemetry-otlp.workspace = true
 
 [dev-dependencies]
 serial_test.workspace = true
