--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ LOCAL_HOST_IP=$(ifconfig en0 | grep inet | grep -v inet6 | awk '{print $2}')
 RUST_VERSION=stable
 
 # KAFKA
-KAFKA_BROKERS="localhost:9093\,$LOCAL_HOST_IP:9094"
-#KAFKA_BROKERS="localhost:9093"
+KAFKA_HOST="localhost\,$LOCAL_HOST_IP"
+KAFKA_PORT="9094"
 KAFKA_CLIENT_ID="chronos"
 KAFKA_GROUP_ID="chronos"
 KAFKA_IN_TOPIC="chronos.in"
@@ -25,7 +25,7 @@ PG_DATABASE=chronos_db
 PG_POOL_SIZE=50
 
 # CONFIG
-RUST_LOG=debug
+RUST_LOG=info
 
 #APP
 DELAY_TIME=0
@@ -35,3 +35,7 @@ TIMING_ADVANCE=0
 FAIL_DETECT_INTERVAL=500
 MAX_RETRIES=3
 PROCESSOR_DB_POLL=10
+
+# TRACING
+OTEL_SERVICE_NAME=chronos
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
