--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,7 +101,8 @@ services:
   #     ENVIRONMENT: "dev"
   #     SERVICE_NAME: "chronos-delay-scheduler"
   #     BUILD_VERSION: "0.0.0"
-  #     KAFKA_BROKERS: "kafka:9092"
+  #     KAFKA_HOST: kafka
+  #     KAFKA_PORT: 9092
   #     KAFKA_CLIENT_ID: "chronos"
   #     KAFKA_GROUP_ID: "chronos"
   #     KAFKA_IN_TOPIC: "chronos.in"
@@ -126,8 +127,6 @@ services:
   #    - zookeeper
   #    - kafka
 
-   
-
   # ********************
   # Telemetry Components
   # ********************
@@ -141,6 +140,7 @@ services:
       - "14250"
     container_name: Jaeger
     environment:
+    #  COLLECTOR_OTLP_ENABLED is false in case running Jaeger as Backend
       - COLLECTOR_OTLP_ENABLED=true
     networks:
       - chronos
@@ -163,59 +163,6 @@ services:
       - "55670:55679" # zpages extension
     depends_on:
       - jaeger-all-in-one
-
-
-
-  # jaeger-all-in-one:
-  #   image: jaegertracing/all-in-one:latest
-  #   container_name: jaeger
-  #   command:
-  #     - "--memory.max-traces"
-  #     - "10000"
-  #     - "--query.base-path"
-  #     - "/jaeger/ui"
-  #     # - "--prometheus.server-url"
-  #     # - "http://${PROMETHEUS_ADDR}"
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         memory: 300M
-  #   restart: unless-stopped
-  #   ports:
-  #     - "16686"                    # Jaeger UI
-  #     - "4317"                           # OTLP gRPC default port
-  #   environment:
-  #     - COLLECTOR_OTLP_ENABLED=true
-  #     # - METRICS_STORAGE_TYPE=prometheus
-  #   # logging: *logging
-  #   networks:
-  #    - chronos
-
-  #  # OpenTelemetry Collector
-  # otelcol:
-  #   image: otel/opentelemetry-collector-contrib:0.84.0
-  #   container_name: otel-col
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         memory: 125M
-  #   restart: unless-stopped
-  #   # command: [ "--config=/etc/otelcol-config.yml", "--config=/etc/otelcol-observability.yml", "--config=/etc/otelcol-config-extras.yml" ]
-  #   command: [ "--config=/etc/otelcol-config.yml" ]
-  #   volumes:
-  #     - ./infra/otelcol-config.yml:/etc/otelcol-config.yml
-  #     # - ./src/otelcollector/otelcol-observability.yml:/etc/otelcol-observability.yml
-  #     # - ./src/otelcollector/otelcol-config-extras.yml:/etc/otelcol-config-extras.yml
-  #   ports:
-  #     - "4317"          # OTLP over gRPC receiver
-  #     - "4318:4318"     # OTLP over HTTP receiver
-  #     - "9464"          # Prometheus exporter
-  #     - "8888"          # metrics endpoint
-  #   depends_on:
-  #     - jaeger-all-in-one
-  #   # logging: *logging
-  #   networks:
-  #    - chronos
 
 
 
