--- a/examples/chronos_ex/Cargo.toml
+++ b/examples/chronos_ex/Cargo.toml
@@ -8,7 +8,7 @@ env_logger = "0.9.0"
 dotenv = "0.15.0"
 log = "0.4.14"
 
-tokio = { version = "1.12.0", features = ["full"] }
+tokio.workspace = true
 futures.workspace = true
 
 chronos_bin={path="../../chronos_bin"}
@@ -18,9 +18,10 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-opentelemetry.workspace = true
 opentelemetry.workspace = true
-opentelemetry-jaeger.workspace = true
+opentelemetry_api.workspace = true
+opentelemetry_sdk.workspace = true
 opentelemetry-otlp.workspace = true
-opentelemetry-http.workspace = true
+opentelemetry-jaeger.workspace = true
 # opentelemetry-stdout.workspace = true
 
 # opentelemetry = "0.20"
