fix: enter env vars to the readme

--- a/.env
+++ b/.env
@@ -39,3 +39,5 @@ PROCESSOR_DB_POLL=10
 # TRACING
 OTEL_SERVICE_NAME=chronos
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
+OTEL_EXPORTER_OTLP_PROTOCOL="http/json"
+OTEL_TRACES_EXPORTER=otlp
