--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ members = [
 #async
 futures="0.3.26"
 async-trait = "0.1.66"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full", "tracing"] }
 
 
 #db
@@ -29,4 +29,17 @@ clippy = "0.0.302"
 rand = "0.8.5"
 serial_test = "2.0.0"
 
+#tracing
+tracing = "0.1"
+tracing-subscriber = "0.3"
+tracing-opentelemetry = "0.21.0"
+
+opentelemetry = { version = "0.20.0", features = ["rt-tokio", "trace"]}
+opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio", "trace"]}
+opentelemetry_api = { version = "0.20.0"}
+# Collector
+opentelemetry-jaeger = {version="0.19.0", features=["rt-tokio"]}
+opentelemetry-stdout = { version = "0.1.0", features = ["trace"] }
+opentelemetry-otlp = { version = "0.13.0", features = ["http-proto", "reqwest-client"] }
+opentelemetry-http = "0.9.0"
 
